# hat

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .gitpod_setup.sh  Pipfile  _testing.py  app_element.py  application.py  configuration.py  conftest.py  drivers.py  general_approach.py  gitpod_setup.sh  hat.py  logging_configuration.yaml  platform_drivers.py  proof_of_concept.py  pyproject.toml  readme.md  readme.rst  registered_drivers.py  registered_platform_drivers.py  requirements.txt  setup.cfg  utilities.py
app_screens/: __init__.py  base_screen.py  home.py  login.py  navigation.py
base/: app_ui.py  basetest.py  drivers.py  rest_api.py  screen.py
configuration/: __init__.py  __init___.py  configuration.py  drivers.py  logging_configuration.yaml  seznam.yaml  twitter.yaml
drivers/: __init__.py  drivers.py  playwright_wrapper.py
google/: __init__.py  application.py
test_applications/: google.py
tests/: base_test.py  fixtures.py  test_basic_playwright.py  tests.py
